Bug 168392 - Disappearing image fill at lower zoom
Summary: Disappearing image fill at lower zoom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2025-09-13 12:12 UTC by Dave Gilbert
Modified: 2026-01-16 14:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Gilbert 2025-09-13 12:12:06 UTC
This is a regression.

The test file in tdf#160345 only renders correctly for me above ~180% zoom on my 4k display;  Below that level it's entirely blank.
I bibisected it to:

This is Armin's:

commit cd93f83bbcba0379bf39f3a4e76b955b7fa368b5
Author: Armin Le Grand (collabora) <Armin.LeGrand@collabora.com>
Date:   Thu Aug 7 21:02:41 2025 +0200

    tdf#167831 avoid painting bitmap data with zero dimensions
    
    See task, there may be bitmap-filled objects in files that
    have a logical size of (0, 0), despite the bitmap having
    valid data. That leads to problems *inside* cairo paint,
    so I have to test and avoid that.
    
    Change-Id: I18db3b030fb5cdf77caa5afd1bf901095fa1c67b
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189135
    Tested-by: Jenkins
    Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>

reverting this fixes the problem.   Which makes some sense - when your texture bitmap gets tiny you can't just remove it - you've got to plot something otherwise you lose the entire feature!
Comment 1 V Stuart Foote 2025-09-13 14:46:51 UTC
Confirm the transition in "tiled image" fill between 180% and 200%

Also, at higher zooms 900% --> 1000% as the filled object "touches" frame boundaries on zoom, the textured fill disappears. 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d6bdb4e2aa08a829b0ecb5fbe990d0abdadfd75
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Also on a 4K monitor, nVidia 4060 GPU with 8GB vRAM
Comment 2 Commit Notification 2025-09-19 14:56:31 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e565a0d634c80a258340f73dc6f4a45cc3e180cc

tdf#168392 Disappearing image fill at lower zoom

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dave Gilbert 2025-09-20 13:34:20 UTC
Thanks!  This fixes that pretty well (including in the original file) - the result suddenly gets quite a bit darker at the lower size, but it's a pretty good trade off.