tdf#168392 Disappearing image fill at lower zoom

regression from
  commit cd93f83bbcba0379bf39f3a4e76b955b7fa368b5
  Author: Armin Le Grand (collabora) <Armin.LeGrand@collabora.com>
  Date:   Thu Aug 7 21:02:41 2025 +0200
  tdf#167831 avoid painting bitmap data with zero dimensions

we cannot skip these fills if the fill bitmap is too small,
we need to fill with something or the resulting picture
is very wrong

Change-Id: I194b59414db8f675df2415c3ee4fb9a0305611b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190981
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>